# nonlinear-features

./: .gitignore  EXPERIMENTS.md  README.md  blog_outline.md  gen_years_paper.py  plot_synthetic_fig4.py  prompt.md  pyproject.toml  render_pca_interactive.py  render_pca_views.py  render_sae_viz.py  run_attn_sae_position.py  run_gemma_eval.py  run_gemma_linebreak_eval.py  run_gemma_linebreak_mech.py  run_gemma_pca.py  run_layer_probe_fine.py  run_linebreak_ising.py  run_pca_trajectory.py  run_pca_viz.py  run_synthetic.py  run_synthetic_ising.py
checkpoints_l1/: results.json
checkpoints_mse/: results.json
figures/gemma_eval/: eval_summary.json  eval_summary_16k.json  eval_summary_65k.json  sae_viz_16k.html  sae_viz_65k.html
figures/gemma_pca/: pca_interactive.html  pca_summary.json
figures/linebreak_eval/: linebreak_eval_results.json
figures/linebreak_eval_v2/: linebreak_eval_results.json
figures/linebreak_mech/: attn_sae_position_summary.json  ising_linebreak_summary.json  layer_probe_attn_out.json  layer_probe_fine.json  layer_probe_full_shuffled.json  layer_probe_mlp_out.json  mech_summary.json  pca_viz_summary.json
nonlinear_features/: data.py  evaluate.py  evaluate_real.py  jumprelu_sae.py  manifolds.py  plot.py  sae.py  train.py
