[project]
name = "nonlinear-features"
version = "0.1.0"
description = "Replication of 'Do Sparse Autoencoders Capture Concept Manifolds?'"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "matplotlib",
    "tqdm",
    "einops",
    "scikit-learn",
    "plotly",
    "transformers>=4.45",
    "accelerate",
    "safetensors",
    "huggingface_hub",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
real-models = ["transformers>=4.45", "accelerate", "scikit-learn", "safetensors", "huggingface_hub"]
